--- a/OnlineCourseWeb/web/WEB-INF/web.xml
+++ b/OnlineCourseWeb/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>SignUpController</servlet-name>
         <servlet-class>Login.SignUpController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CourseController</servlet-name>
+        <servlet-class>Course.CourseController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.htm</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>SignUpController</servlet-name>
         <url-pattern>/SignUpController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseController</servlet-name>
+        <url-pattern>/CourseController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
